--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
       <h3 class="Article__Title">
             <span><img class="inline-img-icon" src="https://www.oracle.com/a/ocom/img/obic-java-cup.svg"></span>
         <a href="directmemory-reclaim.html">
-              DirectMemory,b,,回收及利用 PhantonReference 实现回收的方式
+              DirectMemory的回收,b,,及利用 PhantonReference 实现回收的方式
             </a>
           </h3>
       
