--- a/sparksql-chong-xie-filecommitter-jie-jue-duo-ren-wu-bing-fa-xie-tong-mu-lu-wen-ti.html
+++ b/sparksql-chong-xie-filecommitter-jie-jue-duo-ren-wu-bing-fa-xie-tong-mu-lu-wen-ti.html
@@ -28,8 +28,8 @@
   <meta property="og:type" content="blog">
   <meta property="og:title" content="SparkSql 重写 FileCommitter 解决多任务并发写同目录问题">
   
-    <meta name="description" content="解读 Spark 3.0.3 的 RDD 源码">
-    <meta property="og:description" content="解读 Spark 3.0.3 的 RDD 源码">
+    <meta name="description" content="关于多个 SparkSql 作业写同个目录的问题">
+    <meta property="og:description" content="关于多个 SparkSql 作业写同个目录的问题">
   
   
     <meta property="og:image" content="https://raw.githubusercontent.com/Rianico/Image/master/Avator/sparkles%20(1).png">
