--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
         <span><img class="inline-img-icon" src="https://raw.githubusercontent.com/Rianico/Image/master/Avator/sparkles%20(1).png"></span>
       
       <a href="spark-broadcast-de-shi-xian.html">
-        Spark Broadcast 的实现,c,
+        Spark Broadcast 的实现,c,, 
       </a>
     </h3>
     
